# Project3

./: .gitignore  Dockerfile  README.md  check_code.py  compose.yaml  curl_api.sh  main.py  pyproject.toml
my_fastapi_project/: main.py  pyproject.toml
my_fastapi_project/ui/: index.html  main.jsx  styles.css
ui/: film.html  film.jsx  main.jsx  package.json  styles.css  vite.config.js
